<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                              http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.intino.tara</groupId>
    <artifactId>builder</artifactId>
    <version>2.6.0</version>

    <properties>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>

    <repositories>
        <repository>
            <id>siani-maven</id>
            <name>siani-maven-releases</name>
            <url>http://artifactory.siani.es/artifactory/libs-release</url>
        </repository>
        <repository>
            <id>intino-maven</id>
            <name>intino-maven</name>
            <url>http://artifactory.intino.io/artifactory/releases/</url>
        </repository>
    </repositories>

    <distributionManagement>
        <repository>
            <id>intino-maven</id>
            <url>https://artifactory.intino.io/artifactory/release-builders</url>
        </repository>
    </distributionManagement>
    <build>
        <outputDirectory>../../out/production/builder</outputDirectory>
        <testOutputDirectory>../../out/test/builder</testOutputDirectory>
        <directory>../../out/build/builder</directory>
        <sourceDirectory>src</sourceDirectory>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
                <version>1.12</version>
                <executions>
                    <execution>
                        <id>add-source</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>add-source</goal>
                        </goals>
                        <configuration>
                            <sources>
                                <source>gen</source>
                            </sources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>2.4.3</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <createDependencyReducedPom>true</createDependencyReducedPom>
                            <dependencyReducedPomLocation>${project.build.directory}/dependency-reduced-pom.xml
                            </dependencyReducedPomLocation>
                            <minimizeJar>false</minimizeJar><!--important-->
                            <artifactSet>
                                <includes>
                                    <include>io.intino.legio:model:*</include>
                                </includes>
                            </artifactSet>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>io.intino.tara</groupId>
            <artifactId>language</artifactId>
            <version>1.1.0</version>
        </dependency>
        <dependency>
            <groupId>io.intino.tara</groupId>
            <artifactId>magritte</artifactId>
            <version>2.3.1</version>
            <exclusions>
                <exclusion>
                    <groupId>io.intino.tara</groupId>
                    <artifactId>language</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>io.intino.tara</groupId>
            <artifactId>builder-constants</artifactId>
            <version>[1.2.0, 2.0.0)</version>
        </dependency>

        <dependency>
            <groupId>io.intino.legio</groupId>
            <artifactId>model</artifactId>
            <version>[3.1.0, 4.0.0)</version>
        </dependency>

        <dependency>
            <groupId>io.intino.itrules</groupId>
            <artifactId>engine</artifactId>
            <version>1.0.0</version>
        </dependency>

        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.8.0</version>
        </dependency>

        <dependency>
            <groupId>org.antlr</groupId>
            <artifactId>antlr4-runtime</artifactId>
            <version>4.7</version>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>

    </dependencies>
</project>
